[CSS Fix] Upload Form on Firefox AND Chrome

--- a/shuttleofx_client/static_tmp/styles/upload.less
+++ b/shuttleofx_client/static_tmp/styles/upload.less
@@ -1,7 +1,7 @@
 #metaBundle{
 	#bundleName, #bundleDescription{
 		&.form-control{
-			height: 125%;
+			height: 4em;
 			padding: 1.5em;
 			border-radius: 2px;
 			border: 0;
